--- a/src/transactions/transactions.html
+++ b/src/transactions/transactions.html
@@ -1,6 +1,6 @@
 <div class="d-none" id="transactions">
 
-	<div class="card card-full mb-3">
+	<!-- <div class="card card-full mb-3">
 		<div class="card-body row">
 			<div class="col">
 				<div class="form-inline mb-0">
@@ -11,15 +11,14 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<table class="table table-hover" id="transactions-table">
+	<table class="table table-hover table-sm" id="transactions-table">
 		<thead>
 			<tr>
 				<th>#</th>
-				<th>Address</th>
-				<th>Usages</th>
-				<th>Balances</th>
+				<th>Transaction ID</th>
+				<th>Type</th>
 				<th>Options</th>
 			</tr>
 		</thead>
