--- a/src/main.html
+++ b/src/main.html
@@ -50,7 +50,7 @@
 						<div class="modal-body">
 							<form id="node-address">
 								<div class="input-group">
-									<input class="form-control" name="node-address" type="url" placeholder="https://fullnode.linovalidator.io/" required="" value="http://bgl_user:12345678@161.35.123.34:8332">
+									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="http://161.35.123.34:8332">
 									<div class="input-group-append">
 										<button class="btn btn-success" type="submit">Change</button>
 									</div>
