--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -37,9 +37,9 @@
 						<a class="btn btn-info btn-lg btn-block mb-3" id="save-qr-address" download="Bitgesell-address.png" href="#">Save QR Code</a>
 						<div class="form-group">
 							<label class="my-1 mr-2" for="bitgesell-address">Your Bitgesell address:</label>
-							<input type="text" class="form-control my-1 mr-sm-2" id="bitgesell-address" readonly="">
+							<input type="text" class="form-control my-1 mr-sm-2 copy-val" id="bitgesell-address" readonly="">
 						</div>
-						<button type="button" class="btn btn-success btn-lg btn-block" id="copy-address">Copy Bitgesell address to clipboard</button>
+						<button type="button" class="btn btn-success btn-lg btn-block copy-btn">Copy Bitgesell address to clipboard</button>
 						<a class="btn btn-danger btn-lg btn-block mt-5" href="#new-address">Add new address</a>
 					</form>
 				</div>
