--- a/src/create-wallet/create-wallet.html
+++ b/src/create-wallet/create-wallet.html
@@ -10,10 +10,10 @@
 		<form>
 			<div class="form-group">
 				<label for="backup-phrase">Please write down these 24 words in order and keep them somwhere safe:</label>
-				<textarea class="form-control form-control-lg" id="backup-phrase" name="backup-phrase" rows="3" readonly="" required=""></textarea>
+				<textarea class="form-control form-control-lg copy-val" id="backup-phrase" name="backup-phrase" rows="3" readonly="" required=""></textarea>
 			</div>
 			<h2 class="h5 mb-3 font-weight-normal text-danger">Never share it with anyone!</h2>
-			<button type="button" class="btn btn-success btn-lg btn-block" id="copy-backup-phrase">Copy seed worlds to clipboard</button>
+			<button type="button" class="btn btn-success btn-lg btn-block copy-btn">Copy seed worlds to clipboard</button>
 			<a class="btn btn-info btn-lg btn-block" id="save-backup-phrase" download="Bitgesell-backup-phrase.txt" href="#">Save seed worlds as file</a>
 			<button type="button" class="btn btn-danger btn-lg btn-block mt-5" id="create-wallet-btn">I've copied it somewhere safe</button>
 		</form>
