--- a/src/new-address/new-address.html
+++ b/src/new-address/new-address.html
@@ -12,9 +12,9 @@
 			<a class="btn btn-info btn-lg btn-block mb-3" id="save-qr-new-address" download="Bitgesell-new-address.png" href="#">Save QR Code</a>
 			<div class="form-group">
 				<label for="new-address-val">Your new Bitgesell address:</label>
-				<input type="text" class="form-control form-control-lg" id="new-address-val" readonly="">
+				<input type="text" class="form-control form-control-lg copy-val" id="new-address-val" readonly="">
 			</div>
-			<button type="button" class="btn btn-success btn-lg btn-block" id="new-address-copy">Copy Bitgesell address to clipboard</button>
+			<button type="button" class="btn btn-success btn-lg btn-block copy-btn">Copy Bitgesell address to clipboard</button>
 			<button type="button" class="btn btn-danger btn-lg btn-block mt-5" id="add-new-address-btn">Add another new address</button>
 		</form>
 	</div>
