--- a/src/main.html
+++ b/src/main.html
@@ -25,7 +25,7 @@
 										<span id="user-email">Wallet</span>
 									</a>
 									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" id="create-new-wallet-btn" href="#">Сreate new wallet</a>
+										<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>
 										<div class="dropdown-divider"></div>
