--- a/src/main.html
+++ b/src/main.html
@@ -21,9 +21,7 @@
 							</form>
 							<ul class="navbar-nav my-2 my-lg-0">
 								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle h5 font-weight-bold p-0 my-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-										<span id="user-email">Wallet</span>
-									</a>
+									<a class="nav-link dropdown-toggle h5 font-weight-bold p-0 my-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Wallet</a>
 									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 										<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
 										<div class="dropdown-divider"></div>
