--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -25,7 +25,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<h5 class="modal-title">QR Code</h5>
+					<h5 class="modal-title">Receive</h5>
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 				</div>
 				<div class="modal-body">
@@ -39,7 +39,6 @@
 							<label class="my-1 mr-2" for="bitgesell-address">Your Bitgesell address:</label>
 							<input type="text" class="form-control my-1 mr-sm-2 copy-val" id="bitgesell-address" readonly="">
 						</div>
-						<button type="button" class="btn btn-success btn-lg btn-block copy-btn">Copy Bitgesell address to clipboard</button>
 						<a class="btn btn-danger btn-lg btn-block mt-5" href="#new-address">Add new address</a>
 					</form>
 				</div>
