--- a/src/send/send.html
+++ b/src/send/send.html
@@ -9,20 +9,28 @@
 				<select class="form-control form-control-lg" id="send-from-val" name="from" required="">
 					<option value="">Select your Bitgesell address</option>
 				</select>
+				<small class="form-text text-info h6 d-none" id="send-balance">
+					Your balance: <span class="badge badge-info"></span> BGL
+				</small>
 			</div>
 			<div class="form-group">
-				<label for="send-recipient-val">Recipient address:</label>
-				<input type="text" class="form-control form-control-lg" id="send-recipient-val" name="to" required="" placeholder="Bitgesell address">
+				<label for="send-to-val">Recipient address:</label>
+				<input type="text" class="form-control form-control-lg" id="send-to-val" name="to" required="" placeholder="Bitgesell address">
+				<div class="valid-feedback">Valid address</div>
+				<div class="invalid-feedback">Invalid address</div>
 			</div>
 			<div class="form-group">
 				<label for="send-amount-val">Amount:</label>
-				<input type="text" class="form-control form-control-lg" id="send-amount-val" name="amount" required="" placeholder="0.00000000">
+				<input type="number" class="form-control form-control-lg" id="send-amount-val" name="amount" required="" placeholder="0.00000000" min="0.00000001" step="0.00000001">
 			</div>
 			<div class="form-group">
 				<label for="send-amount-val">Fee:</label>
-				<input type="text" class="form-control form-control-lg" id="send-fee-val" name="fee" required="" placeholder="0.00100000" value="0.00100000">
+				<input type="number" class="form-control form-control-lg" id="send-fee-val" name="fee" required="" placeholder="0.00100000" value="0.00100000" min="0.00000001" step="0.00000001">
 			</div>
-			<button type="submit" class="btn btn-success btn-lg btn-block">Send BGL</button>
+			<button type="submit" class="btn btn-success btn-lg btn-block" id="send-form-btn">Send BGL</button>
+			<small class="form-text text-info h6 d-none" id="send-new-balance">
+				Balance after sending: <span class="badge badge-info"></span> BGL
+			</small>
 		</form>
 	</div>
 </div>
