change default node rpc url

--- a/src/main.html
+++ b/src/main.html
@@ -48,7 +48,7 @@
 						<div class="modal-body">
 							<form id="node-address">
 								<div class="input-group">
-									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="http://161.35.123.34:8332">
+									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="https://rpc.bglwallet.io">
 									<div class="input-group-append">
 										<button class="btn btn-success" type="submit">Change</button>
 									</div>
