--- a/src/main.html
+++ b/src/main.html
@@ -25,7 +25,8 @@
 									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 										<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
 										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>
+										<!--<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>-->
+										<a class="dropdown-item" href="#set-password">Change password</a>
 										<div class="dropdown-divider"></div>
 										<a class="dropdown-item" id="logout-btn" href="#">Logout</a>
 									</div>
