--- a/src/set-password/set-password.html
+++ b/src/set-password/set-password.html
@@ -10,11 +10,11 @@
 		<form>
 			<div class="form-group">
 				<label for="signup-password">Type your password:</label>
-				<input type="password" class="form-control form-control-lg" id="signup-password" name="signup-password" required="" autocomplete="new-password">
+				<input type="password" class="form-control form-control-lg" id="signup-password" name="signup_password" required="" autocomplete="new-password">
 			</div>
 			<div class="form-group">
 				<label for="retype-signup-password">Re-type your password:</label>
-				<input type="password" class="form-control form-control-lg" id="retype-signup-password" name="retype-signup-password" required="">
+				<input type="password" class="form-control form-control-lg" id="retype-signup-password" name="retype_signup_password" required="">
 			</div>
 			<button type="submit" class="btn btn-success btn-lg btn-block">Create local password</button>
 		</form>
