improve responsive on mobile

--- a/src/footer.html
+++ b/src/footer.html
@@ -7,9 +7,17 @@
 				</div>
 			</footer>
 
+			<footer class="footer fixed-bottom justify-content-center visible-sr" id="apple-mobile-menu">
+				<div class="d-flex justify-content-between">
+					<a class="btn btn-outline-warning my-2 btn-sm m-2" href="#my-addresses" role="button"><i class="icon icon-file-text"></i></a>
+					<a class="btn btn-outline-info my-2 btn-sm m-2" href="#send" role="button"><i class="icon icon-compass"></i></a>
+					<a class="btn btn-outline-success my-2 btn-sm m-2" href="#mobile-menu" role="button"><i class="icon icon-list2"></i></a>
+				</div>
+			</footer>
+
 		</div>
 
 		<script src="jsbgl.min.js"></script>
-		<script src="app.min.js?15"></script>
+		<script src="app.min.js?16"></script>
 	</body>
 </html>
