--- a/src/main.html
+++ b/src/main.html
@@ -3,36 +3,33 @@
 
 		<div class="d-none" id="main">
 
-			<header>
+			<header class="hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
 						<a class="navbar-brand mr-lg-5" href="#"><img class="d-inline-block align-top mr-1" src="logo-square.png" alt="">Bitgesell Wallet</a>
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-						<div class="collapse navbar-collapse" id="navbarSupportedContent">
-							<ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="menu-items">
-								<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#my-addresses">My addresses</a></li>
-								<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
-							</ul>
-							<form class="form-inline mr-4 mb-0">
-								<a class="btn btn-outline-warning mr-1" id="amount-sum" href="#transactions">... BGL</a>
-							</form>
-							<form class="form-inline mr-4 mb-0">
-								<button class="btn btn-light btn-sm" id="node-address-modal-btn" type="button">Change Node RPC</button>
-							</form>
-							<ul class="navbar-nav my-2 my-lg-0">
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle h5 font-weight-bold p-0 my-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Wallet</a>
-									<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-										<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
-										<div class="dropdown-divider"></div>
-										<!--<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>-->
-										<a class="dropdown-item" href="#set-password">Change password</a>
-										<div class="dropdown-divider"></div>
-										<a class="dropdown-item" id="logout-btn" href="#">Logout</a>
-									</div>
-								</li>
-							</ul>
-						</div>
+						<ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="menu-items">
+							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#my-addresses">My addresses</a></li>
+							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
+						</ul>
+						<form class="form-inline mr-4 mb-0">
+							<a class="btn btn-outline-warning mr-1" id="amount-sum" href="#transactions">... BGL</a>
+						</form>
+						<form class="form-inline mr-4 mb-0">
+							<button class="btn btn-light btn-sm node-address-btn" type="button">Change Node RPC</button>
+						</form>
+						<ul class="navbar-nav my-2 my-lg-0">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle h5 font-weight-bold p-0 my-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Wallet</a>
+								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+									<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
+									<div class="dropdown-divider"></div>
+									<!--<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>-->
+									<a class="dropdown-item" href="#set-password">Change password</a>
+									<div class="dropdown-divider"></div>
+									<a class="dropdown-item logout" href="#">Logout</a>
+								</div>
+							</li>
+						</ul>
 					</div>
 				</nav>
 			</header>
@@ -61,6 +58,19 @@
 			</div>
 
 			<article>
-				<main role="main" class="container-fluid">
+				<main role="main" class="container-fluid mt-3">
+
+					<div class="row mt-5 d-none" id="mobile-menu">
+						<div class="list-group list-group-flush">
+							<a class="list-group-item list-group-item-action node-address-btn"><i class="icon icon-db fa-fw mt-1 mr-1"></i> Change Node RPC</a>
+							<li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action" href="#welcome"><i class="icon icon-credit-card mt-1 mr-1"></i> Create new wallet</a>
+							<li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action" href="#set-password"><i class="icon icon-key fa-fw mt-1 mr-1"></i> Change password</a>
+							<li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action logout"><i class="icon icon-signout mt-1 mr-1"></i> Logout</a>
+						</div>
+					</div>
+
 
 
