--- a/src/send/send.html
+++ b/src/send/send.html
@@ -11,6 +11,7 @@
 				</select>
 				<small class="form-text text-info h6 d-none" id="send-balance">
 					Your balance: <span class="badge badge-info"></span> BGL
+					| <span class="badge badge-info"></span> USD
 				</small>
 			</div>
 			<div class="form-group">
@@ -22,6 +23,9 @@
 			<div class="form-group">
 				<label for="send-amount-val">Amount:</label>
 				<input type="number" class="form-control form-control-lg" id="send-amount-val" name="amount" required="" placeholder="0.00000000" min="0.00000001" step="0.00000001">
+				<small class="form-text text-info h6 d-none" id="send-amount-price">
+					<span class="badge badge-info"></span> USD
+				</small>
 			</div>
 			<div class="form-group">
 				<label for="send-amount-val">Fee:</label>
