--- a/src/main.html
+++ b/src/main.html
@@ -12,7 +12,7 @@
 							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
 						</ul>
 						<form class="form-inline mr-4 mb-0">
-							<button class="btn btn-outline-warning mr-1" id="amount-sum">... BGL</button>
+							<button class="btn btn-outline-warning mr-1 amount-sum">... BGL</button>
 						</form>
 						<form class="form-inline mr-4 mb-0">
 							<button class="btn btn-light btn-sm node-address-btn" type="button">Change Node RPC</button>
@@ -70,6 +70,7 @@
 							<li class="list-group-item"></li>
 							<a class="list-group-item list-group-item-action logout"><i class="icon icon-signout mt-1 mr-1"></i> Logout</a>
 						</div>
+						<button class="btn btn-outline-warning mt-5 mx-auto amount-sum">... BGL</button>
 					</div>
 
 
