fix typo in text

--- a/src/create-wallet/create-wallet.html
+++ b/src/create-wallet/create-wallet.html
@@ -13,7 +13,7 @@
 				<textarea class="form-control form-control-lg copy-val" id="backup-phrase" name="backup-phrase" rows="3" readonly="" required=""></textarea>
 			</div>
 			<h2 class="h5 mb-3 font-weight-normal text-danger">Never share it with anyone!</h2>
-			<a class="btn btn-info btn-lg btn-block" id="save-backup-phrase" download="Bitgesell-backup-phrase.txt" href="#">Save seed worlds as file</a>
+			<a class="btn btn-info btn-lg btn-block" id="save-backup-phrase" download="Bitgesell-backup-phrase.txt" href="#">Save seed words as file</a>
 			<button type="button" class="btn btn-danger btn-lg btn-block mt-5" id="create-wallet-btn">I've copied it somewhere safe</button>
 		</form>
 	</div>
