--- a/src/login/login.html
+++ b/src/login/login.html
@@ -6,7 +6,7 @@
 		</div>
 		<form>
 			<div class="form-group">
-				<label for="login-password">Your wallet local password (not seed worlds):</label>
+				<label for="login-password">Your wallet local password (not seed words):</label>
 				<input type="password" class="form-control form-control-lg" id="login-password" name="password" required="" autocomplete="current-password">
 			</div>
 			<button type="submit" class="btn btn-success btn-lg btn-block">Open your Bitgesell Wallet</button>
