--- a/src/restore/restore.html
+++ b/src/restore/restore.html
@@ -5,7 +5,7 @@
 		</div>
 		<form>
 			<div class="form-group">
-				<label for="restore-phrase">Please enter your seed worlds (24 words):</label>
+				<label for="restore-phrase">Please enter your seed words (24 words):</label>
 				<textarea class="form-control form-control-lg" id="restore-phrase" name="phrase" placeholder="Type here your mnemonic phrase" required="" rows="3"></textarea>
 			</div>
 			<button type="submit" class="btn btn-success btn-lg btn-block">Import wallet</button>
