--- a/src/set-password/set-password.html
+++ b/src/set-password/set-password.html
@@ -4,7 +4,7 @@
 			<h1 class="h3 mb-3 font-weight-normal">Set Local Password</h1>
 		</div>
 		<div class="my-4">
-			<p>Set a password (not seed worlds) to protect your local wallet in everyday use.</p>
+			<p>Set a password (not seed words) to protect your local wallet in everyday use.</p>
 			<p class="text-warning">This is the local password that will only be used here (on this device).</p>
 		</div>
 		<form>
