--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -1,5 +1,6 @@
 <div class="d-none" id="dashboard">
-	<div class="container col-md-6 text-center pt-5">
-		<h1 class="pt-5">Welcome to Bitgesell Wallet!</h1>
+	<div class="container col-md-6 text-center">
+		<h1>Welcome to Bitgesell Wallet!</h1>
 	</div>
+	<div data-background-color="" data-currency="usd" data-coin-id="bitgesell" data-locale="en" data-height="500" data-width="" class="coingecko-coin-price-chart-widget"></div>
 </div>
