--- a/src/footer.html
+++ b/src/footer.html
@@ -18,6 +18,7 @@
 		</div>
 
 		<script src="jsbgl.min.js"></script>
+		<script src="coingecko-coin-price-chart-widget.js"></script>
 		<script src="app.min.js?19"></script>
 	</body>
 </html>
