--- a/src/main.html
+++ b/src/main.html
@@ -6,7 +6,7 @@
 			<header class="hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
-						<a class="navbar-brand mr-lg-5" href="#"><img class="d-inline-block align-top mr-1" src="logo-square.png" alt="">Bitgesell Wallet</a>
+						<a class="navbar-brand mr-lg-5" href="#dashboard"><img class="d-inline-block align-top mr-1" src="logo-square.png" alt="">Bitgesell Wallet</a>
 						<ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="menu-items">
 							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#my-addresses">My addresses</a></li>
 							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
