improve list transactions

--- a/src/transactions/transactions.html
+++ b/src/transactions/transactions.html
@@ -17,8 +17,15 @@
 		<thead>
 			<tr>
 				<th>#</th>
+				<th>Datetime</th>
 				<th>Transaction ID</th>
 				<th>Type</th>
+				<th>Amount</th>
+				<th>Confirmations</th>
+				<th>Block</th>
+				<th>Fee</th>
+				<th>rbf</th>
+				<th>coinbase</th>
 				<th>Options</th>
 			</tr>
 		</thead>
