--- a/src/footer.html
+++ b/src/footer.html
@@ -3,7 +3,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					<span class="text-muted">Bitgesell Wallet @ 2020</span>
+					<span class="text-muted">Bitgesell Wallet @ 2020-2021</span>
 				</div>
 			</footer>
 
@@ -19,6 +19,6 @@
 
 		<script src="jsbgl.min.js"></script>
 		<script src="coingecko-coin-price-chart-widget.js"></script>
-		<script src="app.min.js?21"></script>
+		<script src="app.min.js?22"></script>
 	</body>
 </html>
