--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -2,5 +2,5 @@
 	<div class="container col-md-6 text-center">
 		<h1>Welcome to Bitgesell Wallet!</h1>
 	</div>
-	<div data-background-color="" data-currency="usd" data-coin-id="bitgesell" data-locale="en" data-height="500" data-width="" class="coingecko-coin-price-chart-widget"></div>
+	<div class="coinmarketcap-currency-widget container col-lg-5 mt-5" data-currencyid="5667" data-base="USD" data-secondary="" data-ticker="true" data-rank="false" data-marketcap="true" data-volume="true" data-statsticker="true" data-stats="USD"></div>
 </div>
