--- a/src/footer.html
+++ b/src/footer.html
@@ -3,7 +3,7 @@
 
 			<footer class="footer">
 				<div class="container-fluid">
-					<span class="text-muted">Bitgesell Wallet @ 2020-2021</span>
+					<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
 				</div>
 			</footer>
 
@@ -11,6 +11,7 @@
 				<div class="d-flex justify-content-between">
 					<a class="btn btn-outline-warning my-2 btn-sm m-2" href="#my-addresses" role="button"><i class="icon icon-file-text"></i></a>
 					<a class="btn btn-outline-info my-2 btn-sm m-2" href="#send" role="button"><i class="icon icon-compass"></i></a>
+					<a class="btn btn-outline-primary my-2 btn-sm m-2" href="https://bglswap.com" target="_blank" role="button"><i class="icon icon-loop2"></i></a>
 					<a class="btn btn-outline-success my-2 btn-sm m-2" href="#mobile-menu" role="button"><i class="icon icon-list2"></i></a>
 				</div>
 			</footer>
@@ -18,7 +19,7 @@
 		</div>
 
 		<script src="jsbgl.min.js"></script>
-		<script src="coingecko-coin-price-chart-widget.js"></script>
-		<script src="app.min.js?22"></script>
+		<script src="coinmarketcap-coin-ticker-widget.js"></script>
+		<script src="app.min.js?23"></script>
 	</body>
 </html>
