--- a/src/main.html
+++ b/src/main.html
@@ -6,10 +6,11 @@
 			<header class="hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
-						<a class="navbar-brand mr-lg-5" href="#dashboard"><img class="d-inline-block align-top mr-1" src="logo-square.png" alt="">Bitgesell Wallet</a>
+						<a class="navbar-brand mr-lg-5" href="#dashboard"><img class="d-inline-block align-top mr-1" src="logo-square.png?2" alt="">Bitgesell Wallet</a>
 						<ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="menu-items">
 							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#my-addresses">My addresses</a></li>
 							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
+							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="https://bglswap.com" target="_blank">Swap</a></li>
 						</ul>
 						<form class="form-inline mr-4 mb-0">
 							<button class="btn btn-dark mr-1 amount-sum">... BGL</button>
@@ -55,6 +56,7 @@
 									</div>
 								</div>
 							</form>
+							<small class="form-text text-muted">Alternative RPC node: <kbd>https://rpc2.bglwallet.io</kbd></small>
 						</div>
 					</div>
 				</div>
@@ -104,5 +106,12 @@
 							<li class="list-group-item"></li>
 							<a class="list-group-item list-group-item-action logout"><i class="icon icon-signout mt-1 mr-1"></i> Logout</a>
 						</div>
-						<button class="btn btn-outline-warning mt-5 mx-auto amount-sum">... BGL</button>
+						<div class="container-fluid">
+							<div class="row mt-5">
+								<button class="btn btn-outline-warning mx-auto amount-sum">... BGL</button>
+							</div>
+							<div class="row mt-5">
+								<span class="mx-auto text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
+							</div>
+						</div>
 					</div>
