--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -1,6 +1,6 @@
 <div class="d-none" id="welcome">
 	<div class="container col-md-4">
-		<img class="img-fluid mt-5" src="logo.svg" alt="Bitgesell Wallet">
+		<img class="img-fluid mt-5" src="logo.svg?2" alt="Bitgesell Wallet">
 		<div class="text-center my-4">
 			<h1 class="h3 mb-3 font-weight-normal">Welcome to Bitgesell Wallet!</h1>
 		</div>
