--- a/src/footer.html
+++ b/src/footer.html
@@ -1,7 +1,7 @@
 				</main>
 			</article>
 
-			<footer class="footer">
+			<footer class="footer hidden-sr">
 				<div class="container-fluid">
 					<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
 				</div>
