--- a/src/footer.html
+++ b/src/footer.html
@@ -1,18 +1,16 @@
 				</main>
 			</article>
 
-			<footer class="footer hidden-sr">
-				<div class="container-fluid">
-					<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
-				</div>
+			<footer class="footer bg-light justify-content-center py-3 hidden-sr">
+				<span class="lh-lg text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
 			</footer>
 
-			<footer class="footer fixed-bottom justify-content-center visible-sr" id="apple-mobile-menu">
-				<div class="d-flex justify-content-between">
-					<a class="btn btn-outline-warning my-2 btn-sm m-2" href="#my-addresses" role="button"><i class="icon icon-file-text"></i></a>
-					<a class="btn btn-outline-info my-2 btn-sm m-2" href="#send" role="button"><i class="icon icon-compass"></i></a>
-					<a class="btn btn-outline-primary my-2 btn-sm m-2" href="https://bglswap.com" target="_blank" role="button"><i class="icon icon-loop2"></i></a>
-					<a class="btn btn-outline-success my-2 btn-sm m-2" href="#mobile-menu" role="button"><i class="icon icon-list2"></i></a>
+			<footer class="footer bg-light fixed-bottom justify-content-center visible-sr" id="apple-mobile-menu">
+				<div class="justify-content-between">
+					<a class="btn btn-outline-warning btn-sm fs-2 m-3" href="#my-addresses" role="button"><i class="icon icon-file-text"></i></a>
+					<a class="btn btn-outline-info btn-sm fs-2 m-3" href="#send" role="button"><i class="icon icon-compass"></i></a>
+					<a class="btn btn-outline-primary btn-sm fs-2 m-3" href="https://bglswap.com" target="_blank" role="button"><i class="icon icon-loop2"></i></a>
+					<a class="btn btn-outline-success btn-sm fs-2 m-3" href="#mobile-menu" role="button"><i class="icon icon-list2"></i></a>
 				</div>
 			</footer>
 
