--- a/src/login/login.html
+++ b/src/login/login.html
@@ -4,12 +4,12 @@
 			<h1 class="h3 mb-3 font-weight-normal">Access to your Bitgesell wallet</h1>
 			<p>To continue, enter your wallet local password!</p>
 		</div>
-		<form>
+		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="login-password">Your wallet local password (not seed words):</label>
 				<input type="password" class="form-control form-control-lg" id="login-password" name="password" required="" autocomplete="current-password">
 			</div>
-			<button type="submit" class="btn btn-success btn-lg btn-block">Open your Bitgesell Wallet</button>
+			<button type="submit" class="btn btn-success btn-lg">Open your Bitgesell Wallet</button>
 		</form>
 	</div>
 </div>
