--- a/src/new-address/new-address.html
+++ b/src/new-address/new-address.html
@@ -4,17 +4,17 @@
 			<h1 class="h3 mb-3 font-weight-normal text-center">New address</h1>
 			<h2 class="h4 mb-3 font-weight-normal">A new Bitgesell address has been created for you.<br>Use this address to receive funds.</h2>
 		</div>
-		<form>
+		<form class="d-grid gap-3">
 			<div class="form-group">
-				<label>Your new Bitgesell address QR Code:</label>
+				<label class="mb-2">Your new Bitgesell address QR Code:</label>
 				<div id="new-address-qrcode"></div>
 			</div>
-			<a class="btn btn-info btn-lg btn-block mb-3" id="save-qr-new-address" download="Bitgesell-new-address.png" href="#">Save QR Code</a>
+			<a class="btn btn-info btn-lg mb-2" id="save-qr-new-address" download="Bitgesell-new-address.png" href="#">Save QR Code</a>
 			<div class="form-group">
 				<label for="new-address-val">Your new Bitgesell address:</label>
 				<input type="text" class="form-control form-control-lg copy-val" id="new-address-val" readonly="">
 			</div>
-			<button type="button" class="btn btn-danger btn-lg btn-block mt-5" id="add-new-address-btn">Add another new address</button>
+			<button type="button" class="btn btn-danger btn-lg mt-5" id="add-new-address-btn">Add another new address</button>
 		</form>
 	</div>
 </div>
