--- a/src/restore/restore.html
+++ b/src/restore/restore.html
@@ -3,12 +3,12 @@
 		<div class="text-center my-4">
 			<h1 class="h3 mb-3 font-weight-normal">Restore Wallet</h1>
 		</div>
-		<form>
+		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="restore-phrase">Please enter your seed words (24 words):</label>
-				<textarea class="form-control form-control-lg" id="restore-phrase" name="phrase" placeholder="Type here your mnemonic phrase" required="" rows="3"></textarea>
+				<textarea class="form-control form-control-lg" id="restore-phrase" name="phrase" placeholder="Type here your mnemonic phrase" required="" rows="4"></textarea>
 			</div>
-			<button type="submit" class="btn btn-success btn-lg btn-block">Import wallet</button>
+			<button type="submit" class="btn btn-success btn-lg">Import wallet</button>
 		</form>
 	</div>
 </div>
