--- a/src/set-password/set-password.html
+++ b/src/set-password/set-password.html
@@ -7,7 +7,7 @@
 			<p>Set a password (not seed words) to protect your local wallet in everyday use.</p>
 			<p class="text-warning">This is the local password that will only be used here (on this device).</p>
 		</div>
-		<form>
+		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="signup-password">Type your password:</label>
 				<input type="password" class="form-control form-control-lg" id="signup-password" name="signup_password" required="" autocomplete="new-password">
@@ -16,7 +16,7 @@
 				<label for="retype-signup-password">Re-type your password:</label>
 				<input type="password" class="form-control form-control-lg" id="retype-signup-password" name="retype_signup_password" required="">
 			</div>
-			<button type="submit" class="btn btn-success btn-lg btn-block">Create local password</button>
+			<button type="submit" class="btn btn-success btn-lg">Create local password</button>
 		</form>
 	</div>
 </div>
