--- a/src/create-wallet/create-wallet.html
+++ b/src/create-wallet/create-wallet.html
@@ -7,14 +7,14 @@
 			<h2 class="h4 mb-3 font-weight-normal">Backup Your Wallet</h2>
 			<h2 class="h5 mb-3 font-weight-normal">Your backup phrase will allow you to recover your crypto if you lose access to your wallet.</h2>
 		</div>
-		<form>
+		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="backup-phrase">Please write down these 24 words in order and keep them somwhere safe:</label>
 				<textarea class="form-control form-control-lg copy-val" id="backup-phrase" name="backup-phrase" rows="3" readonly="" required=""></textarea>
 			</div>
 			<h2 class="h5 mb-3 font-weight-normal text-danger">Never share it with anyone!</h2>
-			<a class="btn btn-info btn-lg btn-block" id="save-backup-phrase" download="Bitgesell-backup-phrase.txt" href="#">Save seed words as file</a>
-			<button type="button" class="btn btn-danger btn-lg btn-block mt-5" id="create-wallet-btn">I've copied it somewhere safe</button>
+			<a class="btn btn-info btn-lg" id="save-backup-phrase" download="Bitgesell-backup-phrase.txt" href="#">Save seed words as file</a>
+			<button type="button" class="btn btn-danger btn-lg mt-5" id="create-wallet-btn">I've copied it somewhere safe</button>
 		</form>
 	</div>
 </div>
