--- a/src/main.html
+++ b/src/main.html
@@ -6,32 +6,30 @@
 			<header class="hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
-						<a class="navbar-brand mr-lg-5" href="#dashboard"><img class="d-inline-block align-top mr-1" src="logo-square.png?2" alt="">Bitgesell Wallet</a>
-						<ul class="navbar-nav mr-auto mt-2 mt-lg-0" id="menu-items">
-							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#my-addresses">My addresses</a></li>
-							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="#send">Send</a></li>
-							<li class="nav-item mx-5"><a class="nav-link h5 font-weight-bold my-0" href="https://bglswap.com" target="_blank">Swap</a></li>
+						<a class="navbar-brand" href="#dashboard"><img class="d-inline-block align-top" src="logo-square.png?2" alt=""> Bitgesell Wallet</a>
+						<ul class="navbar-nav gap-5" id="menu-items">
+							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#my-addresses">My addresses</a></li>
+							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#send">Send</a></li>
+							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="https://bglswap.com" target="_blank">Swap</a></li>
 						</ul>
-						<form class="form-inline mr-4 mb-0">
+						<form class="mb-0">
 							<button class="btn btn-dark mr-1 amount-sum">... BGL</button>
 						</form>
-						<form class="form-inline mr-4 mb-0">
+						<form class="d-flex mb-0 gap-4">
 							<button class="btn btn-light btn-sm theme-btn" type="button">Theme</button>
-						</form>
-						<form class="form-inline mr-4 mb-0">
 							<button class="btn btn-light btn-sm node-address-btn" type="button">Node RPC</button>
 						</form>
-						<ul class="navbar-nav my-2 my-lg-0">
+						<ul class="navbar-nav">
 							<li class="nav-item dropdown">
-								<a class="nav-link dropdown-toggle h5 font-weight-bold p-0 my-0" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Wallet</a>
-								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="#welcome">Сreate new wallet</a>
-									<div class="dropdown-divider"></div>
-									<!--<a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a>-->
-									<a class="dropdown-item" href="#set-password">Change password</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item logout" href="#">Logout</a>
-								</div>
+								<a class="nav-link dropdown-toggle fs-5 fw-bold" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Wallet</a>
+								<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+									<li><a class="dropdown-item" href="#welcome">Сreate new wallet</a></li>
+									<li><hr class="dropdown-divider"></li>
+									<!--<li><a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a></li>-->
+									<li><a class="dropdown-item" href="#set-password">Change password</a></li>
+									<li><hr class="dropdown-divider"></li>
+									<li><a class="dropdown-item logout" href="#">Logout</a></li>
+								</ul>
 							</li>
 						</ul>
 					</div>
@@ -43,17 +41,13 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title">Node RPC API address</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
 							<form id="node-address">
 								<div class="input-group">
 									<input class="form-control" name="node-address" type="url" placeholder="http://[USERNAME]:[PASSWORD]@[IP]:[PORT]" required="" value="https://rpc.bglwallet.io">
-									<div class="input-group-append">
-										<button class="btn btn-success" type="submit">Change</button>
-									</div>
+									<button class="btn btn-success" type="submit">Change</button>
 								</div>
 							</form>
 							<small class="form-text text-muted">Alternative RPC node: <kbd>https://rpc2.bglwallet.io</kbd></small>
@@ -62,28 +56,22 @@
 				</div>
 			</div>
 
-			<div class="modal" id="theme-modal" tabindex="-1" role="dialog" data-backdrop="false">
+			<div class="modal" id="theme-modal" tabindex="-1" role="dialog" data-bs-backdrop="false">
 				<div class="modal-dialog" role="document">
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title">Theme</h5>
-							<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">&times;</span>
-							</button>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
 							<form id="theme-form">
 								<div class="input-group">
-									<div class="input-group-prepend">
-										<button class="btn btn-outline-primary" type="button" id="prev-theme">Previous</button>
-									</div>
+									<button class="btn btn-outline-primary" type="button" id="prev-theme">Previous</button>
 									<select class="form-control" id="theme-val" name="theme" placeholder="Select theme" required="">
 										<optgroup label="Light"></optgroup>
 										<optgroup label="Dark"></optgroup>
 									</select>
-									<div class="input-group-append">
-										<button class="btn btn-outline-primary" type="button" id="next-theme">Next</button>
-									</div>
+									<button class="btn btn-outline-primary" type="button" id="next-theme">Next</button>
 								</div>
 							</form>
 						</div>
@@ -94,24 +82,24 @@
 			<article>
 				<main role="main" class="container-fluid mt-3">
 
-					<div class="row mt-5 d-none" id="mobile-menu">
+					<div class="mt-5 d-none" id="mobile-menu">
 						<div class="list-group list-group-flush">
-							<a class="list-group-item list-group-item-action theme-btn"><i class="icon icon-theme fa-fw mt-1 mr-1"></i> Change theme</a>
+							<a class="list-group-item list-group-item-action py-3 theme-btn"><i class="icon icon-theme"></i> Change theme</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action node-address-btn"><i class="icon icon-db fa-fw mt-1 mr-1"></i> Change Node RPC</a>
+							<a class="list-group-item list-group-item-action py-3 node-address-btn"><i class="icon icon-db"></i> Change Node RPC</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action" href="#welcome"><i class="icon icon-credit-card mt-1 mr-1"></i> Create new wallet</a>
+							<a class="list-group-item list-group-item-action py-3" href="#welcome"><i class="icon icon-credit-card"></i> Create new wallet</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action" href="#set-password"><i class="icon icon-key fa-fw mt-1 mr-1"></i> Change password</a>
+							<a class="list-group-item list-group-item-action py-3" href="#set-password"><i class="icon icon-key"></i> Change password</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action logout"><i class="icon icon-signout mt-1 mr-1"></i> Logout</a>
+							<a class="list-group-item list-group-item-action py-3 logout"><i class="icon icon-signout"></i> Logout</a>
 						</div>
-						<div class="container-fluid">
-							<div class="row mt-5">
-								<button class="btn btn-outline-warning mx-auto amount-sum">... BGL</button>
+						<div class="text-center">
+							<div class="mt-5">
+								<button class="btn btn-outline-warning amount-sum">... BGL</button>
 							</div>
-							<div class="row mt-5">
-								<span class="mx-auto text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
+							<div class="mt-5">
+								<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
 							</div>
 						</div>
 					</div>
