--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -4,7 +4,7 @@
 		<div class="col">
 			<a class="btn btn-success" href="#new-address">Add new address</a>
 		</div>
-		<div class="col">
+		<div class="col d-flex justify-content-end">
 			<button class="btn btn-info float-right" id="import-address-btn">Import address</button>
 		</div>
 	</div>
@@ -12,6 +12,7 @@
 	<table class="table table-hover" id="my-addresses-table">
 		<thead>
 			<tr>
+				<th></th>
 				<th>#</th>
 				<th>Address</th>
 				<th>Balances</th>
@@ -21,45 +22,45 @@
 		</thead>
 	</table>
 
-	<div class="modal" id="qr-code-modal" tabindex="-1" role="dialog" data-backdrop="true">
+	<div class="modal" id="qr-code-modal" tabindex="-1" role="dialog" data-bs-backdrop="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title">Receive</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form class="d-grid gap-3">
 						<div class="form-group">
-							<label>Your Bitgesell address QR Code:</label>
+							<label class="mb-2">Your Bitgesell address QR Code:</label>
 							<div id="address-qrcode"></div>
 						</div>
-						<a class="btn btn-info btn-lg btn-block mb-3" id="save-qr-address" download="Bitgesell-address.png" href="#">Save QR Code</a>
+						<a class="btn btn-info btn-lg mb-2" id="save-qr-address" download="Bitgesell-address.png" href="#">Save QR Code</a>
 						<div class="form-group">
 							<label class="my-1 mr-2" for="bitgesell-address">Your Bitgesell address:</label>
 							<input type="text" class="form-control my-1 mr-sm-2 copy-val" id="bitgesell-address" readonly="">
 						</div>
-						<a class="btn btn-danger btn-lg btn-block mt-5" href="#new-address">Add new address</a>
+						<a class="btn btn-danger btn-lg mt-5" href="#new-address">Add new address</a>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="modal" id="import-address-modal" tabindex="-1" role="dialog" data-backdrop="true">
+	<div class="modal" id="import-address-modal" tabindex="-1" role="dialog" data-bs-backdrop="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title">Import address</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<form>
+					<form class="d-grid gap-3">
 						<div class="form-group">
 							<label class="my-1 mr-2" for="import-wif">Your WIF:</label>
 							<input type="text" class="form-control my-1 mr-sm-2" id="import-wif" name="wif" placeholder="L5JZPiWpmFxudXxUwq6sLsCWbVHMEKA4XtFdVMrga1dqWvR5hJs2" required="">
 						</div>
-						<button type="submit" class="btn btn-success btn-lg btn-block">Import address</button>
+						<button type="submit" class="btn btn-success btn-lg">Import address</button>
 					</form>
 				</div>
 			</div>
