--- a/src/send/send.html
+++ b/src/send/send.html
@@ -4,15 +4,15 @@
 			<h1 class="h3 mb-3 font-weight-normal text-center">Send Bitgesell</h1>
 		</div>
 		<form>
-		<fieldset>
+		<fieldset class="d-grid gap-4">
 			<div class="form-group">
 				<label for="send-from-val">From your address:</label>
 				<select class="form-control form-control-lg" id="send-from-val" name="from" required="">
 					<option value="">Select your Bitgesell address</option>
 				</select>
 				<small class="form-text text-info h6 mb-0 d-none" id="send-balance">
-					Your balance: <span class="badge badge-info"></span> BGL
-					| <span class="badge badge-info"></span> USD
+					Your balance: <span class="badge bg-info"></span> BGL
+					| <span class="badge bg-info"></span> USD
 				</small>
 				<div class="invalid-feedback">No funds</div>
 			</div>
@@ -26,22 +26,20 @@
 				<label for="send-amount-val">Amount:</label>
 				<div class="input-group">
 					<input type="number" class="form-control form-control-lg" id="send-amount-val" name="amount" required="" placeholder="0.00000000" min="0.00000001" step="0.00000001">
-					<div class="input-group-append">
-						<button class="btn btn-primary" type="button" id="send-amount-max">Max</button>
-					</div>
+					<button class="btn btn-primary" type="button" id="send-amount-max">Max</button>
 					<div class="invalid-feedback">Insufficient funds</div>
 				</div>
 				<small class="form-text text-info h6 d-none" id="send-amount-price">
-					<span class="badge badge-info"></span> USD
+					<span class="badge bg-info"></span> USD
 				</small>
 			</div>
 			<div class="form-group">
 				<label for="send-amount-val">Fee:</label>
 				<input type="number" class="form-control form-control-lg" id="send-fee-val" name="fee" required="" placeholder="0.00010000" value="0.00010000" min="0.00000001" step="0.00000001">
 			</div>
-			<button type="submit" class="btn btn-success btn-lg btn-block" id="send-form-btn">Send BGL</button>
+			<button type="submit" class="btn btn-success btn-lg" id="send-form-btn">Send BGL</button>
 			<small class="form-text text-info h6 d-none" id="send-new-balance">
-				Balance after sending: <span class="badge badge-info"></span> BGL
+				Balance after sending: <span class="badge bg-info"></span> BGL
 			</small>
 		</fieldset>
 		</form>
