--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -1,10 +1,10 @@
 <div class="d-none" id="welcome">
-	<div class="container col-md-4">
+	<div class="container col-md-4 d-grid gap-3">
 		<img class="img-fluid mt-5" src="logo.svg?2" alt="Bitgesell Wallet">
 		<div class="text-center my-4">
 			<h1 class="h3 mb-3 font-weight-normal">Welcome to Bitgesell Wallet!</h1>
 		</div>
-		<a class="btn btn-success btn-lg btn-block mt-5" href="#create-wallet">Create a New Wallet</a>
-		<a class="btn btn-primary btn-lg btn-block mt-4" href="#restore">Restore a Wallet</a>
+		<a class="btn btn-success btn-lg mt-3" href="#create-wallet">Create a New Wallet</a>
+		<a class="btn btn-primary btn-lg mt-4" href="#restore">Restore a Wallet</a>
 	</div>
 </div>
