--- a/src/footer.html
+++ b/src/footer.html
@@ -7,17 +7,34 @@
 
 			<footer class="footer bg-light fixed-bottom justify-content-center visible-sr" id="apple-mobile-menu">
 				<div class="justify-content-between">
-					<a class="btn btn-outline-warning btn-sm fs-2 m-3" href="#my-addresses" role="button"><i class="icon icon-file-text"></i></a>
-					<a class="btn btn-outline-info btn-sm fs-2 m-3" href="#send" role="button"><i class="icon icon-compass"></i></a>
-					<a class="btn btn-outline-primary btn-sm fs-2 m-3" href="https://bglswap.com" target="_blank" role="button"><i class="icon icon-loop2"></i></a>
-					<a class="btn btn-outline-success btn-sm fs-2 m-3" href="#mobile-menu" role="button"><i class="icon icon-list2"></i></a>
+					<a class="btn btn-outline-warning btn-sm fs-2 m-3" href="#my-addresses" role="button"><i class="fa-solid fa-table-list"></i></a>
+					<a class="btn btn-outline-info btn-sm fs-2 m-3" href="#send" role="button"><i class="fa-solid fa-paper-plane"></i></a>
+					<a class="btn btn-outline-primary btn-sm fs-2 m-3" href="https://bglswap.com" target="_blank" role="button"><i class="fa-solid fa-rotate"></i></a>
+					<a class="btn btn-outline-success btn-sm fs-2 m-3" href="#mobile-menu" role="button"><i class="fa-solid fa-bars"></i></a>
 				</div>
 			</footer>
+
+			<!-- <footer class="d-flex justify-content-center fixed-bottom bg-light visible-sr" id="apple-mobile-menu">
+				<ul class="nav nav-pills w-100 d-flex justify-content-around aling-items-center flex-nowrap" role="tablist">
+					<li class="nav-item" role="presentation">
+						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6" type="button" role="tab" href="#my-addresses"><i class="fa-solid fa-table-list"></i>Addresses</a>
+					</li>
+					<li class="nav-item" role="presentation">
+						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6" type="button" role="tab" href="#send"><i class="fa-solid fa-paper-plane"></i>Send</a>
+					</li>
+					<li class="nav-item" role="presentation">
+						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6" type="button" role="tab" href="https://bglswap.com" target="_blank"><i class="fa-solid fa-rotate"></i>Swap</a>
+					</li>
+					<li class="nav-item" role="presentation">
+						<a class="nav-link bg-transparent d-flex flex-column justify-content-center align-items-center gap-1 fs-6" type="button" role="tab" href="#mobile-menu"><i class="fa-solid fa-bars"></i>Menu</a>
+					</li>
+				</ul>
+			</footer> -->
 
 		</div>
 
 		<script src="jsbgl.min.js"></script>
 		<script src="coinmarketcap-coin-ticker-widget.js"></script>
-		<script src="app.min.js?23"></script>
+		<script src="app.min.js?24"></script>
 	</body>
 </html>
