--- a/src/main.html
+++ b/src/main.html
@@ -25,8 +25,9 @@
 								<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
 									<li><a class="dropdown-item" href="#welcome">Сreate new wallet</a></li>
 									<li><hr class="dropdown-divider"></li>
-									<!--<li><a class="dropdown-item" id="export-wallet-btn" href="#">Export wallet</a></li>-->
 									<li><a class="dropdown-item" href="#set-password">Change password</a></li>
+									<li><hr class="dropdown-divider"></li>
+									<li><a class="dropdown-item" href="#export-wallet">Export wallet</a></li>
 									<li><hr class="dropdown-divider"></li>
 									<li><a class="dropdown-item logout" href="#">Logout</a></li>
 								</ul>
@@ -84,15 +85,17 @@
 
 					<div class="mt-5 d-none" id="mobile-menu">
 						<div class="list-group list-group-flush">
-							<a class="list-group-item list-group-item-action py-3 theme-btn"><i class="icon icon-theme"></i> Change theme</a>
+							<a class="list-group-item list-group-item-action py-3 theme-btn"><i class="fa-solid fa-palette"></i> Change theme</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3 node-address-btn"><i class="icon icon-db"></i> Change Node RPC</a>
+							<a class="list-group-item list-group-item-action py-3 node-address-btn"><i class="fa-solid fa-server"></i> Change Node RPC</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3" href="#welcome"><i class="icon icon-credit-card"></i> Create new wallet</a>
+							<a class="list-group-item list-group-item-action py-3" href="#welcome"><i class="fa-solid fa-wallet"></i> Create new wallet</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3" href="#set-password"><i class="icon icon-key"></i> Change password</a>
+							<a class="list-group-item list-group-item-action py-3" href="#set-password"><i class="fa-solid fa-key"></i> Change password</a>
 							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3 logout"><i class="icon icon-signout"></i> Logout</a>
+							<a class="list-group-item list-group-item-action py-3" href="#export-wallet"><i class="fa-solid fa-file-export"></i> Export wallet</a>
+							<li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action py-3 logout"><i class="fa-solid fa-person-running"></i> Logout</a>
 						</div>
 						<div class="text-center">
 							<div class="mt-5">
