--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -56,8 +56,8 @@
 				</div>
 				<div class="modal-body">
 					<form class="d-grid gap-3">
-						<div class="form-group">
-							<label class="my-1 mr-2" for="import-wif">Your WIF:</label>
+						<div class="form-group d-grid">
+							<label class="my-1 mr-2" for="import-wif">Your WIF: <a class="btn btn-info btn-sm float-end" target="_blank" href="https://learnmeabitcoin.com/technical/wif"><i class="fa-solid fa-circle-question"></i> what is it</a></label>
 							<input type="text" class="form-control my-1 mr-sm-2" id="import-wif" name="wif" placeholder="L5JZPiWpmFxudXxUwq6sLsCWbVHMEKA4XtFdVMrga1dqWvR5hJs2" required="">
 						</div>
 						<button type="submit" class="btn btn-success btn-lg">Import address</button>
