--- a/src/main.html
+++ b/src/main.html
@@ -3,14 +3,14 @@
 
 		<div class="d-none" id="main">
 
-			<header class="hidden-sr">
+			<header class="pb-5 hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
 						<a class="navbar-brand" href="#dashboard"><img class="d-inline-block align-top" src="logo-square.png?2" alt=""> Bitgesell Wallet</a>
 						<ul class="navbar-nav gap-5" id="menu-items">
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#my-addresses">My addresses</a></li>
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#send">Send</a></li>
-							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="https://bglswap.com" target="_blank">Swap</a></li>
+							<!-- <li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="https://bglswap.com" target="_blank">Swap</a></li> -->
 						</ul>
 						<form class="mb-0">
 							<button class="btn btn-dark mr-1 amount-sum">... BGL</button>
@@ -81,7 +81,7 @@
 			</div>
 
 			<article>
-				<main role="main" class="container-fluid mt-3">
+				<main role="main" class="container-fluid mt-4">
 
 					<div class="mt-5 d-none" id="mobile-menu">
 						<div class="list-group list-group-flush">
@@ -94,15 +94,15 @@
 							<a class="list-group-item list-group-item-action py-3" href="#set-password"><i class="fa-solid fa-key"></i> Change password</a>
 							<li class="list-group-item"></li>
 							<a class="list-group-item list-group-item-action py-3" href="#export-wallet"><i class="fa-solid fa-file-export"></i> Export wallet</a>
-							<li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3 logout"><i class="fa-solid fa-person-running"></i> Logout</a>
+							<!-- <li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action py-3 logout"><i class="fa-solid fa-person-running"></i> Logout</a> -->
 						</div>
 						<div class="text-center">
 							<div class="mt-5">
 								<button class="btn btn-outline-warning amount-sum">... BGL</button>
 							</div>
 							<div class="mt-5">
-								<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2023</span></span>
+								<span class="text-muted">Bitgesell Wallet <kbd class="version"></kbd> @ 2020-<span class="current-year">2025</span></span>
 							</div>
 						</div>
 					</div>
