--- a/src/transactions/transactions.html
+++ b/src/transactions/transactions.html
@@ -1,6 +1,6 @@
 <div class="d-none" id="transactions">
 
-	<!-- <div class="card card-full mb-3">
+	<!-- <div class="card container-fluid mb-3">
 		<div class="card-body row">
 			<div class="col">
 				<div class="form-inline mb-0">
