--- a/src/my-addresses/my-addresses.html
+++ b/src/my-addresses/my-addresses.html
@@ -15,7 +15,7 @@
 				<th></th>
 				<th>#</th>
 				<th>Address</th>
-				<th>Balances</th>
+				<th>Balance</th>
 				<th>Usages</th>
 				<th>Options</th>
 			</tr>
@@ -23,7 +23,7 @@
 	</table>
 
 	<div class="modal" id="qr-code-modal" tabindex="-1" role="dialog" data-bs-backdrop="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title">Receive</h5>
@@ -48,7 +48,7 @@
 	</div>
 
 	<div class="modal" id="import-address-modal" tabindex="-1" role="dialog" data-bs-backdrop="true">
-		<div class="modal-dialog" role="document">
+		<div class="modal-dialog modal-dialog-centered" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
 					<h5 class="modal-title">Import address</h5>
