--- a/src/header.html
+++ b/src/header.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
-		<link rel="stylesheet" href="themes/flatly.min.css" id="theme">
+		<link rel="stylesheet" href="themes/lumen.min.css" id="theme">
 		<link rel="stylesheet" href="custom.min.css?8">
 
 		<title>Bitgesell Wallet</title>
