--- a/src/main.html
+++ b/src/main.html
@@ -94,8 +94,8 @@
 							<a class="list-group-item list-group-item-action py-3" href="#set-password"><i class="fa-solid fa-key"></i> Change password</a>
 							<li class="list-group-item"></li>
 							<a class="list-group-item list-group-item-action py-3" href="#export-wallet"><i class="fa-solid fa-file-export"></i> Export wallet</a>
-							<!-- <li class="list-group-item"></li>
-							<a class="list-group-item list-group-item-action py-3 logout"><i class="fa-solid fa-person-running"></i> Logout</a> -->
+							<li class="list-group-item"></li>
+							<a class="list-group-item list-group-item-action py-3 logout"><i class="fa-solid fa-person-running"></i> Logout</a>
 						</div>
 						<div class="text-center">
 							<div class="mt-5">
