--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -24,8 +24,10 @@
 
 		</div>
 
-		<script src="jsbgl.min.js"></script>
-		<script src="coinmarketcap-coin-ticker-widget.js"></script>
-		<script src="app.min.js?28"></script>
+		<script src="./assets/coinmarketcap-coin-ticker-widget.js"></script>
+		<script src="./assets/telegram-web-app.js"></script>
+		<script src="./assets/qrcode.js"></script>
+		<script src="./../node_modules/jsbgl/dist/jsbgl.web.min.js"></script>
+		<script type="module" src="./index.js"></script>
 	</body>
 </html>
