--- a/src/main/main.html
+++ b/src/main/main.html
@@ -6,7 +6,7 @@
 			<header class="pb-5 hidden-sr">
 				<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="#dashboard"><img class="d-inline-block align-top" src="logo-square.png?2" alt=""> Bitgesell Wallet</a>
+						<a class="navbar-brand" href="#dashboard"><img class="d-inline-block align-top" src="./assets/logo-square.png?2" alt=""> Bitgesell Wallet</a>
 						<ul class="navbar-nav text-uppercase gap-5" id="menu-items">
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#my-addresses">My addresses</a></li>
 							<li class="nav-item mx-sm-0 mx-xl-2 mx-xxl-5"><a class="nav-link fs-5 fw-bold" href="#send">Send</a></li>
