--- a/src/set-password/set-password.html
+++ b/src/set-password/set-password.html
@@ -10,11 +10,17 @@
 		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="signup-password">Type your password:</label>
-				<input type="password" class="form-control form-control-lg" id="signup-password" name="signup_password" required="" autocomplete="new-password">
+				<div class="input-group">
+					<input type="password" class="form-control form-control-lg" id="signup-password" name="signup_password" required="" autocomplete="new-password">
+					<button class="btn btn-info toggle-password" type="button"><i class="fas fa-eye"></i></button>
+				</div>
 			</div>
 			<div class="form-group">
 				<label for="retype-signup-password">Re-type your password:</label>
-				<input type="password" class="form-control form-control-lg" id="retype-signup-password" name="retype_signup_password" required="">
+				<div class="input-group">
+					<input type="password" class="form-control form-control-lg" id="retype-signup-password" name="retype_signup_password" required="">
+					<button class="btn btn-info toggle-password" type="button"><i class="fas fa-eye"></i></button>
+				</div>
 			</div>
 			<button type="submit" class="btn btn-success btn-lg">Create local password</button>
 		</form>
