--- a/src/login/login.html
+++ b/src/login/login.html
@@ -7,7 +7,10 @@
 		<form class="d-grid gap-3">
 			<div class="form-group">
 				<label for="login-password">Your wallet local password (not seed words):</label>
-				<input type="password" class="form-control form-control-lg" id="login-password" name="password" required="" autocomplete="current-password">
+				<div class="input-group">
+					<input type="password" class="form-control form-control-lg" id="login-password" name="password" required="" autocomplete="current-password">
+					<button class="btn btn-info toggle-password" type="button"><i class="fas fa-eye"></i></button>
+				</div>
 			</div>
 			<button type="submit" class="btn btn-success btn-lg">Open your Bitgesell Wallet</button>
 		</form>
